@@ -1,6 +1,7 @@
 Revision history for Task-BeLike-KWAKWA
 
 {{$NEXT}}
+        - Add debugging section
 
 0.02  2018-07-18 14:55:08 BST
         - Add more modules (including notes on testing)
